--- a/style.css
+++ b/style.css
@@ -18,3 +18,12 @@ a
 {
     color: #86AB44; 
 }
+
+    @media only screen and (max-width: 992px)
+    {
+        #voluntario
+        {
+            height: 100%;
+            width:105px;
+        }
+    }
